FIX align

--- a/css/components/footer.css
+++ b/css/components/footer.css
@@ -24,7 +24,3 @@
   transition: 2s ease;
   font-size: 40px;
 }
-
-.footer h3, ul, p {
-  text-align: center;
-}
